# testC

./: CMakeLists.txt  main.c  readme.md
inc/: lib1.h
src/: lib1.c
